<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity_address">2465 Latham St\nMountain View, CA 94043</string>
    <string name="udacity_phone">650-555-5555</string>
    <string name="udacity_web">http://www.udacity.com/</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="web">Web Address:</string>
    <string name="students_first">Students First!</string>
</resources>
